added first task of pb_gather_SSH_keys.yml file

--- a/GRE Tunnel Lab/pb_gather_SSH_keys.yml
+++ b/GRE Tunnel Lab/pb_gather_SSH_keys.yml
@@ -3,3 +3,9 @@
     hosts: all
     vars:
     - host_file: "~/.SSH/known_hosts"
+    tasks:
+      - name: Create known hosts file"
+        file:
+        path: "{{ hosts_file }}"
+        stage: file
+        changed_when: false
