added tunnel interfaces to Customer.yml file

--- a/GRE Tunnel Lab/group_vars/Customer.yml
+++ b/GRE Tunnel Lab/group_vars/Customer.yml
@@ -4,7 +4,11 @@ interfaces:
   Customer1:
     - name: GigabitEthernet0/2
       description: Management
+    - name: Tunnel 220
+      description: Customer Site 1 Dynamic Tunnel
 
   Customer2:
     - name: GigabitEthernet0/2
       description: Management
+    - name: Tunnel 220
+      description: Customer Site 2 Dynamic Tunnel
