--- a/GRE Tunnel Lab/group_vars/Customer.yml
+++ b/GRE Tunnel Lab/group_vars/Customer.yml
@@ -8,6 +8,8 @@ interfaces:
       description: Customer Site 1 Dynamic Tunnel
     - name: GigabitEthernet0/0
       description: Interface to Lan
+    - name: GigabitEthernet0/1
+      description: Interface to ISP2
   Customer2:
     - name: GigabitEthernet0/2
       description: Management
@@ -15,3 +17,5 @@ interfaces:
       description: Customer Site 2 Dynamic Tunnel
     - name: GigabitEthernet0/1
       description: Interface to Lan
+    - name: GigabitEthernet0/0
+      description: Interface to ISP3
