--- a/GRE Tunnel Lab/group_vars/Customer.yml
+++ b/GRE Tunnel Lab/group_vars/Customer.yml
@@ -4,18 +4,25 @@ interfaces:
   Customer1:
     - name: GigabitEthernet0/2
       description: Management
+      ipv4: dhcp
     - name: Tunnel 220
       description: Customer Site 1 Dynamic Tunnel
+      ipv4: 10.1.3.1/24
     - name: GigabitEthernet0/0
       description: Interface to Lan
+      ipv4: 10.1.1.1/24
     - name: GigabitEthernet0/1
       description: Interface to ISP2
+      ipv4: dhcp
   Customer2:
     - name: GigabitEthernet0/2
       description: Management
     - name: Tunnel 220
       description: Customer Site 2 Dynamic Tunnel
+      ipv4: 10.1.3.2/24
     - name: GigabitEthernet0/1
       description: Interface to Lan
+      ipv4: 10.1.2.1/24
     - name: GigabitEthernet0/0
       description: Interface to ISP3
+      ipv4: dhcp
