--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -12,6 +12,6 @@
       - name: Configure IP address for network routers
         cisco.ios.ios_l3_interfaces:
           config:
-            name: "{{ item.name }}"
-            ipv4: 
-              address: "{{ item.ipv4 }}"
+            - name: "{{ item.name }}"
+              ipv4:
+                address: "{{ item.ipv4 }}"
