--- a/GRE Tunnel Lab/group_vars/ISP.yml
+++ b/GRE Tunnel Lab/group_vars/ISP.yml
@@ -5,9 +5,11 @@ interfaces:
     - name: GigabitEthernet0/0
       description: Interface to ISP2
       ipv4: 8.8.8.1/24
+      duplex: auto
     - name: GigabitEthernet0/2
       description: Management
       ipv4: dhcp
+      duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP3
       ipv4: 8.8.9.1/24
@@ -15,19 +17,25 @@ interfaces:
     - name: GigabitEthernet0/2
       description: Management
       ipv4: dhcp
+      duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to Customer1
       ipv4: 8.8.10.1/24
+      duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP1
       ipv4: 8.8.8.2/24
+      duplex: auto
   ISP3: 
     - name: GigabitEthernet0/2
       description: Management 
       ipv4: dhcp
+      duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to ISP1
       ipv4: 8.8.9.2/24
+      duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to Customer2
       ipv4: 8.8.11.1/24
+      duplex: auto
