fixed spelling issue

--- a/GRE Tunnel Lab/pb_gather_SSH_keys.yml
+++ b/GRE Tunnel Lab/pb_gather_SSH_keys.yml
@@ -6,6 +6,6 @@
     tasks:
       - name: Create known hosts file"
         file:
-        path: "{{ hosts_file }}"
+        path: "{{ host_file }}"
         stage: file
         changed_when: false
