changed command in show_commands pb to save work

--- a/GRE Tunnel Lab/show_commands.yml
+++ b/GRE Tunnel Lab/show_commands.yml
@@ -7,7 +7,7 @@
       - name: Run various show commands 
         cisco.ios.ios_command:
           commands:
-            - show version
+            - wr mem
 
         register: output
 
