test changes to network.yml and pb_build_network.yml

--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -15,5 +15,5 @@
           config:
             - name: "{{ item.name }}"
               ipv4:
-                address: "{{ item.ipv4 }}"
+              - address: "{{ item.address }}"
         with_items: "{{interfaces[inventory_hostname]}}"
