--- a/GRE Tunnel Lab/group_vars/network.yml
+++ b/GRE Tunnel Lab/group_vars/network.yml
@@ -17,13 +17,11 @@ interfaces:
       duplex: auto
     - name: Tunnel 220
       description: Customer Site 1 Dynamic Tunnel
-      ipv4:
-      - address: 10.1.3.1/24
+      ipv4: 10.1.3.1/24
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to Lan
-      ipv4: 
-      - address: 10.1.1.1/24
+      ipv4: 10.1.1.1/24
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP2
@@ -36,13 +34,11 @@ interfaces:
       ipv4: dhcp
     - name: Tunnel 220
       description: Customer Site 2 Dynamic Tunnel
-      ipv4:
-      - address: 10.1.3.2/24
+      ipv4: 10.1.3.2/24
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to Lan
-      ipv4:
-      - address: 10.1.2.1/24
+      ipv4: 10.1.2.1/24
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to ISP3
@@ -51,8 +47,7 @@ interfaces:
   ISP1:
     - name: GigabitEthernet0/0
       description: Interface to ISP2
-      ipv4:
-      - address: 8.8.8.1/24
+      ipv4: 8.8.8.1/24
       duplex: auto
     - name: GigabitEthernet0/2
       description: Management
@@ -60,8 +55,7 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP3
-      ipv4:
-      - address: 8.8.9.1/24
+      ipv4: 8.8.9.1/24
   ISP2:
     - name: GigabitEthernet0/2
       description: Management
@@ -69,13 +63,11 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to Customer1
-      ipv4:
-      - address: 8.8.10.1/24
+      ipv4: 8.8.10.1/24
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP1
-      ipv4:
-      - address: 8.8.8.2/24
+      ipv4: 8.8.8.2/24
       duplex: auto
   ISP3: 
     - name: GigabitEthernet0/2
@@ -84,11 +76,9 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to ISP1
-      ipv4:
-      - address: 8.8.9.2/24
+      ipv4: 8.8.9.2/24
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to Customer2
-      ipv4:
-      - address: 8.8.11.1/24
+      ipv4: 8.8.11.1/24
       duplex: auto
