--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -18,3 +18,4 @@
             - address: "{{ item.address }}"
           state: merged
         with_items: "{{interfaces[inventory_hostname]}}"
+        tags: ip
