--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -11,8 +11,10 @@
         with_items: "{{interfaces[inventory_hostname]}}"
 
       - name: Configure IP address for network routers
-        ios_l3_interface:
-          name: "{{ item.name }}"
-          ipv4: "{{ item.ipv4 }}"
+        ios_l3_interfaces:
+          config:
+            name: "{{ item.name }}"
+            ipv4:
+              - address: "{{ item.ipv4 }}"
         with_items: "{{interfaces[inventory_hostname]}}"
         tags: ip
