--- a/GRE Tunnel Lab/group_vars/network.yml
+++ b/GRE Tunnel Lab/group_vars/network.yml
@@ -17,11 +17,13 @@ interfaces:
       duplex: auto
     - name: Tunnel 220
       description: Customer Site 1 Dynamic Tunnel
-      ipv4: 10.1.3.1/24
+      ipv4: 10.1.3.1
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to Lan
-      ipv4: 10.1.1.1/24
+      ipv4: 10.1.1.1
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP2
@@ -34,11 +36,13 @@ interfaces:
       ipv4: dhcp
     - name: Tunnel 220
       description: Customer Site 2 Dynamic Tunnel
-      ipv4: 10.1.3.2/24
+      ipv4: 10.1.3.2
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to Lan
-      ipv4: 10.1.2.1/24
+      ipv4: 10.1.2.1
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to ISP3
@@ -47,7 +51,8 @@ interfaces:
   ISP1:
     - name: GigabitEthernet0/0
       description: Interface to ISP2
-      ipv4: 8.8.8.1/24
+      ipv4: 8.8.8.1
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/2
       description: Management
@@ -55,7 +60,8 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP3
-      ipv4: 8.8.9.1/24
+      ipv4: 8.8.9.1
+      mask: 255.255.255.0
   ISP2:
     - name: GigabitEthernet0/2
       description: Management
@@ -63,11 +69,13 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to Customer1
-      ipv4: 8.8.10.1/24
+      ipv4: 8.8.10.1
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP1
-      ipv4: 8.8.8.2/24
+      ipv4: 8.8.8.2
+      mask: 255.255.255.0
       duplex: auto
   ISP3: 
     - name: GigabitEthernet0/2
@@ -76,9 +84,11 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to ISP1
-      ipv4: 8.8.9.2/24
+      ipv4: 8.8.9.2
+      mask: 255.255.255.0
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to Customer2
-      ipv4: 8.8.11.1/24
+      ipv4: 8.8.11.1
+      mask: 255.255.255.0
       duplex: auto
