--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -20,3 +20,5 @@
         ignore_errors: true
         with_items: "{{interfaces[inventory_hostname]}}"
         tags: ip
+
+      - name: Configure OSPF on interfaces
