added ospf parameters

--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -22,3 +22,10 @@
         tags: ip
 
       - name: Configure OSPF on interfaces
+        cisco.ios.ios_ospfv2:
+          config:
+            processes: 1
+              network:
+                address:
+                area:
+                wildcard_bits:
