added ospf parameter for Customer2 intgi0/0

--- a/GRE Tunnel Lab/group_vars/network.yml
+++ b/GRE Tunnel Lab/group_vars/network.yml
@@ -47,6 +47,7 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/0
       description: Interface to ISP3
+      ospf: yes
       ipv4: dhcp
       duplex: auto
   ISP1:
