--- a/GRE Tunnel Lab/group_vars/network.yml
+++ b/GRE Tunnel Lab/group_vars/network.yml
@@ -63,6 +63,7 @@ interfaces:
       duplex: auto
     - name: GigabitEthernet0/1
       description: Interface to ISP3
+      ospf: yes
       ipv4: 8.8.9.1
       mask: 255.255.255.0
   ISP2:
