--- a/GRE Tunnel Lab/group_vars/network.yml
+++ b/GRE Tunnel Lab/group_vars/network.yml
@@ -76,11 +76,13 @@ interfaces:
       ipv4: 8.8.10.1
       mask: 255.255.255.0
       duplex: auto
+      ospf: yes
     - name: GigabitEthernet0/1
       description: Interface to ISP1
       ipv4: 8.8.8.2
       mask: 255.255.255.0
       duplex: auto
+      ospf: yes
   ISP3: 
     - name: GigabitEthernet0/2
       description: Management 
