--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -21,5 +21,12 @@
         with_items: "{{interfaces[inventory_hostname]}}"
         tags: ip
 
-      - name: Configure OSPF on interfaces
+  - name: Configure OSPF on Routers
+    hosts: all
+    tags: ospf
+    tasks: 
+
+      - name: Configure OSPF On Interfaces
+        ios_config:
+          parents: interface {{ item.name }}
         
