added first ospf command for playbook

--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -29,4 +29,6 @@
       - name: Configure OSPF On Interfaces
         ios_config:
           parents: interface {{ item.name }}
+          lines: 
+            - ip ospf {{ ospf_process  }} area {{ ospf_area }}
         
