added with_items loop

--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -31,4 +31,5 @@
           parents: interface {{ item.name }}
           lines: 
             - ip ospf {{ ospf_process  }} area {{ ospf_area }}
+        with_items: "{{interfaces[inventory_hostname] | selectattr('ospf') | list }}"
         
