--- a/GRE Tunnel Lab/pb_build_network.yml
+++ b/GRE Tunnel Lab/pb_build_network.yml
@@ -36,5 +36,8 @@
               network:
               - address 0.0.0.0
                 area: '0'
+                wildcard_bits: 255.255.255.255
+              process_id: 100
+              router_id: 1.1.1.1
 
           
