--- a/GRE Tunnel Lab/show_commands.yml
+++ b/GRE Tunnel Lab/show_commands.yml
@@ -7,7 +7,7 @@
       - name: Run various show commands 
         cisco.ios.ios_command:
           commands:
-            - wr mem
+            - sh run | i ospf
 
         register: output
 
